# expense_model

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
data/: expense_model.py
expense_model/: gunicorn_conf.py  main.py
expense_model/routes/: bulk_extract.py  gpt3.py  static.py
expense_model/ssl/: fullkeychain.pem  private.key
routes/: gpt3.py  regex.py
